# api/order/orderApi.gen.go
@@ -33,6 +33,20 @@ type OrderCreatePostResponse struct {
 	Id string `json:"id"`
 }
 
+// OrderDetailGetResponse defines model for OrderDetailGetResponse.
+type OrderDetailGetResponse struct {
+	// Id id of the order
+	Id         string              `json:"id"`
+	OrderItems []OrderItemResponse `json:"orderItems"`
+
+	// OrderTime order creation time (in unix millis)
+	OrderTime int64                  `json:"orderTime"`
+	Shipping  ShippingAddressRequest `json:"shipping"`
+
+	// Status order status
+	Status string `json:"status"`
+}
+
 // OrderItemRequest defines model for OrderItemRequest.
 type OrderItemRequest struct {
 	// Amount order amount
@@ -42,10 +56,58 @@ type OrderItemRequest struct {
 	ProductId string `json:"productId" validate:"required,uuid"`
 }
 
+// OrderItemResponse defines model for OrderItemResponse.
+type OrderItemResponse struct {
+	// Id id of the order item
+	Id string `json:"id"`
+
+	// ProductImage product image in full accessible url
+	ProductImage string `json:"productImage"`
+
+	// ProductName product name
+	ProductName string `json:"productName"`
+
+	// ProductPrice product price
+	ProductPrice int64 `json:"productPrice"`
+
+	// Qty order quantity for this product
+	Qty int `json:"qty"`
+}
+
+// OrderListGetDetail defines model for OrderListGetDetail.
+type OrderListGetDetail struct {
+	// Id id of the order
+	Id string `json:"id"`
+
+	// Status latest order status
+	Status string `json:"status"`
+
+	// TotalAmount total order amount
+	TotalAmount int64 `json:"totalAmount"`
+}
+
+// OrderListGetResponse defines model for OrderListGetResponse.
+type OrderListGetResponse struct {
+	Data       []OrderListGetDetail `json:"data"`
+	Pagination PaginationSchema     `json:"pagination"`
+}
+
 // OrderStatusPutRequest defines model for OrderStatusPutRequest.
 type OrderStatusPutRequest struct {
 	// Status order status to be updated
 	Status string `json:"status" validate:"required,oneof=confirmed"`
+}
+
+// PaginationSchema defines model for PaginationSchema.
+type PaginationSchema struct {
+	// Page current active page
+	Page int `json:"page"`
+
+	// PageSize number of active data in the page
+	PageSize int `json:"pageSize"`
+
+	// TotalData total data available to be outputted. meaning that max page is 1000 (totalData / pageSize)
+	TotalData int64 `json:"totalData"`
 }
 
 // ShippingAddressRequest defines model for ShippingAddressRequest.
@@ -66,6 +128,9 @@ type ShippingAddressRequest struct {
 // OrderIdPathParams defines model for OrderIdPathParams.
 type OrderIdPathParams = string
 
+// OrderListGetJSONRequestBody defines body for OrderListGet for application/json ContentType.
+type OrderListGetJSONRequestBody = OrderCreatePostRequest
+
 // OrderCreatePostJSONRequestBody defines body for OrderCreatePost for application/json ContentType.
 type OrderCreatePostJSONRequestBody = OrderCreatePostRequest
 
@@ -74,9 +139,15 @@ type OrderStatusPutJSONRequestBody = OrderStatusPutRequest
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+	// Get order list
+	// (GET /orders)
+	OrderListGet(ctx echo.Context) error
 	// Create new order
 	// (POST /orders)
 	OrderCreatePost(ctx echo.Context) error
+	// Get order detail
+	// (GET /orders/{order_id})
+	OrderDetailGet(ctx echo.Context, orderId OrderIdPathParams) error
 	// Update order status
 	// (PUT /orders/{order_id}/status)
 	OrderStatusPut(ctx echo.Context, orderId OrderIdPathParams) error
@@ -87,6 +158,17 @@ type ServerInterfaceWrapper struct {
 	Handler ServerInterface
 }
 
+// OrderListGet converts echo context to params.
+func (w *ServerInterfaceWrapper) OrderListGet(ctx echo.Context) error {
+	var err error
+
+	ctx.Set(BearerAuthScopes, []string{"list-order"})
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.OrderListGet(ctx)
+	return err
+}
+
 // OrderCreatePost converts echo context to params.
 func (w *ServerInterfaceWrapper) OrderCreatePost(ctx echo.Context) error {
 	var err error
@@ -95,6 +177,22 @@ func (w *ServerInterfaceWrapper) OrderCreatePost(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.OrderCreatePost(ctx)
+	return err
+}
+
+// OrderDetailGet converts echo context to params.
+func (w *ServerInterfaceWrapper) OrderDetailGet(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "order_id" -------------
+	var orderId OrderIdPathParams
+
+	err = runtime.BindStyledParameterWithOptions("simple", "order_id", ctx.Param("order_id"), &orderId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter order_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.OrderDetailGet(ctx, orderId)
 	return err
 }
 
@@ -144,7 +242,9 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
+	router.GET(baseURL+"/orders", wrapper.OrderListGet)
 	router.POST(baseURL+"/orders", wrapper.OrderCreatePost)
+	router.GET(baseURL+"/orders/:order_id", wrapper.OrderDetailGet)
 	router.PUT(baseURL+"/orders/:order_id/status", wrapper.OrderStatusPut)
 
 }
